# cft

./: .gitignore  README.md  pyproject.toml  results.txt
hw2_PostgreSQL/: hw2_PostgreSQL.ipynb
hw3.1_logs_parsing/: script.py
hw3.2_EDA/: hw3.2_FocusStart_Encoders.ipynb
hw5/: POS_CASH_balance.py  application.py  bureau.py  bureau_balance.py  credit_card_balance.py  installments_payments.py  previous_application.py  utils.py
hw6/: forest.py  log_reg.py  preprocessing.py
src/app/modelling/features/: application_features.py  bureau_balance_features.py  bureau_features.py  credit_card_balance_features.py  installments_payments.py  previous_application.py
src/app/utils/: bd_connector.py
src/config/: bd_param.py
