[tool.poetry]
name = "credit-scoring"
version = "0.0.0"
description = "hw1"
authors = ["Danil Arkhipov <aceloolrd@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
jupyter = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
