[tool.poetry]
name = "credit-scoring"
version = "0.0.0"
description = "hw1"
authors = ["Danil Arkhipov <aceloolrd@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
jupyter = "^1.0.0"
scikit-learn = "^1.4.1.post1"
numpy = "^1.26.4"
pandas = "^2.2.1"
seaborn = "^0.13.2"
matplotlib = "^3.8.3"
category-encoders = "^2.6.3"
missingno = "^0.5.2"
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
